2012-03-31  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-cfg.c (call_can_make_abnormal_goto): New predicate.
	(stmt_can_make_abnormal_goto): Use it.
	(is_ctrl_altering_stmt): Likewise.

2012-03-31  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline
	2012-03-30  Martin Jambor  <mjambor@suse.cz>

	* tree-ssa-ccp.c (insert_clobbers_for_var): Do not assert that there
	is a builtin_stack_save in a dominating BB.

2012-03-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (avx_h<plusminus_insn>v4df3): Fix results
	crossing 128bit lane boundary.

2012-03-29  Uros Bizjak  <ubizjak@gmail.com>

	Backported from mainline
	2012-03-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52698
	* config/i386/i386-protos.h (ix86_legitimize_reload_address):
	New prototype.
	* config/i386/i386.h (LEGITIMIZE_RELOAD_ADDRESS): New define.
	* config/i386/i386.c: Include reload.h.
	(ix86_legitimize_reload_address): New function.

2012-03-28  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline
	2012-03-27  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/52693
	* tree-sra.c (sra_modify_assign): Do not call
	load_assign_lhs_subreplacements when working with an unscalarizable
	region.

2012-03-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/52691
	* tree-ssa-ccp.c (optimize_stdarg_builtin): Optimize
	__builtin_va_start to __builtin_next_arg if the latter is
	builtin_decl_explicit_p rather than when it is not.

	PR middle-end/52750
	* tree-vect-generic.c (vector_element): Perform multiplication
	for pos in bitsizetype type instead of idx type.

2012-03-28  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2012-03-28 mainline r185910.

	PR target/52692
	* config/avr/avr.c (TARGET_BUILTIN_DECL): New define.
	(avr_builtin_decl): New static function.
	(struct avr_builtin_description, avr_bdesc): Move up.
	Add GTY marker. Add field fndecl. Remove redundant field id.
	(avr_init_builtins): Initialize avr_bdesc[ID].fndecl.