@@ -1,3 +1,8 @@
+2012-04-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/52835
+	* gfortran.dg/pr52835.f90: New test.
+
 2012-03-31  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/controlled6.adb: New test.
